--- a/index.html
+++ b/index.html
@@ -50,27 +50,27 @@
     <p class="key-documents"> <b>Key Documents</b></p>
     <section class="section-3">
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">Client Agreement</a>
         </div>
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">MTF Trading Rules</a>
         </div>
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">Privacy Policy</a>
         </div>
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">Complaints Policy</a>
         </div>
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">Conflict of Interest Policy</a>
         </div>
         <div class="page">
-            <img src="/img/file.png" alt="file">
+            <img src="img/file.png" alt="file">
             <a href="#">Risk Disclosure</a>
         </div>
     </section>
@@ -78,18 +78,18 @@
                     <p class="documents"><b>Key Documents</b></p>
         <div class="complains">
             <div class="page">
-                <img src="/img/file.png" alt="file">
+                <img src="img/file.png" alt="file">
                 <a href="#">Privacy Policy</a>
             </div>
             <div class="page">
-                <img src="/img/file.png" alt="file">
+                <img src="img/file.png" alt="file">
                 <a href="#">Terms of Service</a>
             </div>
         </div>
                     <p class="DMCC"><b>MidChains Trading (DMCC)</b></p>
                     <p class="documents"><b>Key Documents</b></p>
             <div class="page-1">
-                <img src="/img/file.png" alt="file">
+                <img src="img/file.png" alt="file">
                 <a href="#">Terms of Service</a>
             </div>
     <section class="section-4">
