fix images and css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navigation">
             <div class="nav-left">
                 <div class="img-logo-menu">
-                    <img class="img-main" src="/img/Logo Midchains.png" alt="logo">
+                    <img class="img-main" src="img/Logo Midchains.png" alt="logo">
                 </div>
                 <div class="nav-main_list">
                     <ul>
@@ -23,9 +23,9 @@
                     </ul>
                 </div>
                 <div class="nav-right">
-                    <img src="/img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="/img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="/img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                 </div>
             </div>
 
@@ -33,12 +33,12 @@
     </header>
     <section class="section-1">
         <div class="triunghi-rosu">
-            <img class="rosu" src="/img/rosu.png" alt="">
-            <img class="prazracnii-1" src="/img/prazracnii.png" alt="">
+            <img class="rosu" src="img/rosu.png" alt="">
+            <img class="prazracnii-1" src="img/prazracnii.png" alt="">
         </div>
         <h1 class="main-h1">Regulation</h1>
         <div class="triunghi-verde">
-            <img class="verde" src="/img/verde.png" alt="">
+            <img class="verde" src="img/verde.png" alt="">
         </div>
     </section>
     <section class="section-2">
@@ -149,14 +149,14 @@
     </section>
     <section class="section-6">
         <div class="store">
-            <img src="/img/Google Play.png" alt="">
-            <img src="/img/App Store.png" alt="">
+            <img src="img/Google Play.png" alt="">
+            <img src="img/App Store.png" alt="">
         </div>
         <div class="main-logo">
-            <img src="/img/Logo Midchains.png" alt="">
+            <img src="img/Logo Midchains.png" alt="">
         </div>
         <div class="icons">
-            <img src="/img/Frame 624.png" alt="">
+            <img src="img/Frame 624.png" alt="">
         </div>
     </section>
     <div class="subtitles">
