added two pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>MidChains</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index2.html">
+    <link rel="stylesheet" href="index3.html">
 </head>
 <body>
     <header>
@@ -14,10 +15,10 @@
                 <div class="img-logo-menu">
                     <img class="img-main" src="img/Logo Midchains.png" alt="logo">
                 </div>
-                <div class="nav-main_list">
-                    <ul>
+                <div>
+                    <ul class="nav-main_list">
                         <li class="list"><a class="link" href="#">Individuals</a></li>
-                        <li class="list"><a class="link" href="#">Businesses</a></li>
+                        <li class="list"><a class="link" href="index3.html" target="_blank">Businesses</a></li>
                         <li class="list"><a class="link" href="#">Company</a></li>
                         <li class="list"><a class="link" href="#">Resources</a></li>
                     </ul>
