--- a/index.html
+++ b/index.html
@@ -3,43 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MidChains</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index2.html">
-    <link rel="stylesheet" href="index3.html">
+    <title>Individuals</title>
+    <link rel="stylesheet" href="dist/nav-footer-style.css">
+    <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet" href="about-midchains.html">
+    <link rel="stylesheet" href="private-clients.html">
 </head>
 <body>
     <header>
         <nav class="navigation">
             <div class="nav-left">
-                <div class="img-logo-menu">
-                    <img class="img-main" src="img/Logo Midchains.png" alt="logo">
+                <div>
+                    <img  src="assests/img/Logo Midchains.png" alt="logo">
                 </div>
                 <div>
                     <ul class="nav-main_list">
-                        <li class="list"><a class="link" href="#">Individuals</a></li>
-                        <li class="list"><a class="link" href="index3.html" target="_blank">Businesses</a></li>
-                        <li class="list"><a class="link" href="#">Company</a></li>
-                        <li class="list"><a class="link" href="#">Resources</a></li>
+                        <li class="list"><a class="nav-link" href="#">Individuals</a></li>
+                        <li class="list"><a class="nav-link" href="#">Businesses</a></li>
+                        <li class="list"><a class="nav-link" href="about-midchains.html" target="_blank" >Company</a></li>
+                        <li class="list"><a class="nav-link" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="nav-right">
-                    <img src="img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                 </div>
             </div>
-
         </nav>
     </header>
     <section class="section-1">
         <div class="triunghi-rosu">
-            <img class="rosu" src="img/rosu.png" alt="">
-            <img class="prazracnii-1" src="img/prazracnii.png" alt="">
+            <img class="rosu" src="assests/img/rosu.png" alt="">
+            <img class="prazracnii-1" src="assests/img/prazracnii.png" alt="">
         </div>
         <h1 class="main-h1">Regulation</h1>
         <div class="triunghi-verde">
-            <img class="verde" src="img/verde.png" alt="">
+            <img class="verde" src="assests/img/verde.png" alt="">
         </div>
     </section>
     <section class="section-2">
@@ -51,27 +51,27 @@
     <p class="key-documents"> <b>Key Documents</b></p>
     <section class="section-3">
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">Client Agreement</a>
         </div>
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">MTF Trading Rules</a>
         </div>
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">Privacy Policy</a>
         </div>
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">Complaints Policy</a>
         </div>
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">Conflict of Interest Policy</a>
         </div>
         <div class="page">
-            <img src="img/file.png" alt="file">
+            <img src="assests/img/file.png" alt="file">
             <a href="#">Risk Disclosure</a>
         </div>
     </section>
@@ -79,18 +79,18 @@
                     <p class="documents"><b>Key Documents</b></p>
         <div class="complains">
             <div class="page">
-                <img src="img/file.png" alt="file">
+                <img src="assests/img/file.png" alt="file">
                 <a href="#">Privacy Policy</a>
             </div>
             <div class="page">
-                <img src="img/file.png" alt="file">
+                <img src="assests/img/file.png" alt="file">
                 <a href="#">Terms of Service</a>
             </div>
         </div>
                     <p class="DMCC"><b>MidChains Trading (DMCC)</b></p>
                     <p class="documents"><b>Key Documents</b></p>
             <div class="page-1">
-                <img src="img/file.png" alt="file">
+                <img src="assests/img/file.png" alt="file">
                 <a href="#">Terms of Service</a>
             </div>
     <section class="section-4">
@@ -99,9 +99,9 @@
             <input class="search" type="text" placeholder="Enter your email here">
             <p class="touch"><a class="touch-1" href="#">Subscribe</a></p>
     </section>
-    <section class="section-5">
+    <section class="footer-menu">
         <div class="individuals">
-            <h3>Individuals</h3>
+            <h3 class="title-footer-menu">Individuals</h3>
             <ul>
                 <li>MidChains Exchange</li>
                 <li><a href="index2.html" target="_blank" class="privatee">Private Clients</a></li>
@@ -110,7 +110,7 @@
             </ul>
         </div>
         <div class="businesses">
-            <h3>Businesses</h3>
+            <h3 class="title-footer-menu">Businesses</h3>
             <ul>
                 <li>Institutional</li>
                 <li>Licensed Custody</li>
@@ -120,7 +120,7 @@
             </ul>
         </div>
         <div class="company">
-            <h3>Company</h3>
+            <h3 class="title-footer-menu">Company</h3>
             <ul>
                 <li>About</li>
                 <li>Regulations</li>
@@ -129,7 +129,7 @@
             </ul>
         </div>
         <div class="resources">
-            <h3>Resources</h3>
+            <h3 class="title-footer-menu">Resources</h3>
             <ul>
                 <li>Support</li>
                 <li>FAQs</li>
@@ -139,7 +139,7 @@
             </ul>
         </div>
         <div class="terms">
-            <h3>Terms & Conditions</h3>
+            <h3 class="title-footer-menu">Terms & Conditions</h3>
             <ul>
                 <li>MidChains Limited (ADGM)</li>
                 <li>MCP MidChains Pay (DMCC)</li>
@@ -148,23 +148,23 @@
             </ul>
         </div>
     </section>
-    <section class="section-6">
-        <div class="store">
-            <img src="img/Google Play.png" alt="">
-            <img src="img/App Store.png" alt="">
+    <section class="footer-network">
+        <div class="footer-store">
+            <img src="assests/img/Google Play.png" alt="">
+            <img src="assests/img/App Store.png" alt="">
         </div>
-        <div class="main-logo">
-            <img src="img/Logo Midchains.png" alt="">
+        <div>
+            <img src="assests/img/Logo Midchains.png" alt="">
         </div>
-        <div class="icons">
-            <img src="img/Frame 624.png" alt="">
+        <div class="footer-icons">
+            <img src="assests/img/Frame 624.png" alt="">
         </div>
     </section>
-    <div class="subtitles">
-        <p class="more">Purchasing, holding and trading Virtual assets may not be suitable for everyone, so please ensure that you fully understand the risks involved. MidChains does not issue advice, recommendations or opinion in relation to acquiring, holding or trading a virtual assets. MidChains is not a financial advisor, and all services are provided on an execution only basis. The information on this site is not directed at residents of United States, or use by any person in any country or jurisdiction where such distribution or use would be contrary to local law or regulation.</p>
+    <div class="footer-subtitles">
+        <p class="footer-description-end">Purchasing, holding and trading Virtual assets may not be suitable for everyone, so please ensure that you fully understand the risks involved. MidChains does not issue advice, recommendations or opinion in relation to acquiring, holding or trading a virtual assets. MidChains is not a financial advisor, and all services are provided on an execution only basis. The information on this site is not directed at residents of United States, or use by any person in any country or jurisdiction where such distribution or use would be contrary to local law or regulation.</p>
     </div>
-    <div class="end">
-        <p class="more">© 2022 Copyright. All Rights Reserved. MidChains. Sitemap</p>
+    <div class="footer-paragraf-end">
+        <p class="footer-description-end">© 2022 Copyright. All Rights Reserved. MidChains. Sitemap</p>
     </div>
 </body>
 </html>
