--- a/private-clients.html
+++ b/private-clients.html
@@ -5,35 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Private Clients</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="dist/nav-footer-style.css">
+    <link rel="stylesheet" href="dist/style-private-clients.css">
 </head>
 
 <body>
     <header>
         <nav class="navigation">
             <div class="nav-left">
-                <div class="img-logo-menu">
-                    <img class="img-main" src="img/Logo Midchains.png" alt="logo">
+                <div>
+                    <img  src="assests/img/Logo Midchains.png" alt="logo">
                 </div>
                 <div>
                     <ul class="nav-main_list">
-                        <li class="list"><a class="link" href="#">Individuals</a></li>
-                        <li class="list"><a class="link" href="index3.html" target="_blank">Businesses</a></li>
-                        <li class="list"><a class="link" href="#">Company</a></li>
-                        <li class="list"><a class="link" href="#">Resources</a></li>
+                        <li class="list"><a class="nav-link" href="#">Individuals</a></li>
+                        <li class="list"><a class="nav-link"  href="#">Businesses</a></li>
+                        <li class="list"><a class="nav-link" href="about-midchains.html" target="_blank">Company</a></li>
+                        <li class="list"><a class="nav-link" href="#">Resources</a></li>
                     </ul>
                 </div>
                 <div class="nav-right">
-                    <img src="img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    <img src="img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/language_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/login_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    <img src="assests/img/logout_FILL0_wght400_GRAD0_opsz24.svg" alt="">
                 </div>
             </div>
         </nav>
     </header>
     <section class="section-1">
         <div class="container-1">
-            <img src="img-2/crystal.png" alt="crystal-logo">
+            <img src="assests/img-2/crystal.png" alt="crystal-logo">
             <h1 class="private">Private Clients</h1>
             <p class="access">Access MidChains’ white glove service to help you navigate the crypto markets</p>
             <div class="rose">
@@ -47,40 +48,38 @@
             <p class="interested">I’m interested</p>
         </div>
         <div class="container-2">
-            <img id="rosu" src="img-2/rosu.png" alt="">
-            <img src="img-2/portfolio.png" alt="">
-            <img id="verde" src="img-2/verde.png" alt="">
+            <img class="port" src="assests/img-2/portfolio.png" alt="">         
         </div>
     </section>
     <h2>MidChains <span class="private">Private</span> Client Features</h2>
     <section class="section-2">
         <div class="icon">
-            <img src="img-2/manager.png" alt="">
+            <img src="assests/img-2/manager.png" alt="">
             <h3>Dedicated Account Manager</h3>
             <p class="p-section-2">Direct line for onboarding and overall account support</p>
         </div>
         <div class="icon">
-            <img src="img-2/OTC.png" alt="">
+            <img src="assests/img-2/OTC.png" alt="">
             <h3>OTC Products</h3>
             <p class="p-section-2">Access block trading, leverage, options and structured deposit notes</p>
         </div>
         <div class="icon">
-            <img src="img-2/target.png" alt="">
+            <img src="assests/img-2/target.png" alt="">
             <h3>Tailored Execution</h3>
             <p class="p-section-2">Personalised strategies to help you reach your goals</p>
         </div>
         <div class="icon">
-            <img src="img-2/Prime OTC Execution.png" alt="">
+            <img src="assests/img-2/Prime OTC Execution.png" alt="">
             <h3>Algorithmic Execution</h3>
             <p class="p-section-2">Access TWAP and VWAP to reduce operational risks</p>
         </div>
         <div class="icon">
-            <img src="img-2/desk.png" alt="">
+            <img src="assests/img-2/desk.png" alt="">
             <h3>Coverage Desk</h3>
             <p class="p-section-2">Receive MidChains’ institutional market insights</p>
         </div>
         <div class="icon">
-            <img src="img-2/time.png" alt="">
+            <img src="assests/img-2/time.png" alt="">
             <h3>Settlement Flexibility</h3>
             <p class="p-section-2">Settle trades within 24h using your bank and/or an external wallet of your choice.
             </p>
@@ -89,7 +88,7 @@
     <h2>Secured. <span class="compliant">Compliant. </span>Backed.</h2>
     <section class="section-3">
         <div class="tablle">
-            <img src="img-2/law.png" alt="">
+            <img src="assests/img-2/law.png" alt="">
             <h4>Safety of Assets</h4>
             <ul>
                 <li class="green">Customers’ assets are safeguarded and subject to ongoing regulatory checks</li>
@@ -98,7 +97,7 @@
             </ul>
         </div>
         <div class="tablle">
-            <img src="img-2/Security.png" alt="">
+            <img src="assests/img-2/Security.png" alt="">
             <h4>Enhanced Security</h4>
             <ul>
                 <li class="green">State-of-the-art encryption to better protect users and their accounts</li>
@@ -108,7 +107,7 @@
 
         </div>
         <div class="tablle">
-            <img src="img-2/Institutional.png" alt="">
+            <img src="assests/img-2/Institutional.png" alt="">
             <h4>Institutional Backing</h4>
             <li class="green">Backed by the sovereign wealth funds including Mubadala and DisruptAD</li>
             <li class="green">Backed by reputed international investors including MIAX Exchange Group, Lukka, GSR, and Emurgo</li>
@@ -122,18 +121,18 @@
             <p class="interestedd">I’m interested</p>
         </div>
     </section>
-    <section class="section-5">
+    <section class="footer-menu">
         <div class="individuals">
-            <h3>Individuals</h3>
+            <h3 class="title-footer-menu">Individuals</h3>
             <ul>
                 <li>MidChains Exchange</li>
-                <li><a href="index2.html" target="_blank" class="privatee">Private Clients</a></li>
+                <li><a href="private-clients.html" target="_blank" class="privatee">Private Clients</a></li>
                 <li>OTC Desk</li>
                 <li>Midchains Card</li>
             </ul>
         </div>
         <div class="businesses">
-            <h3>Businesses</h3>
+            <h3 class="title-footer-menu">Businesses</h3>
             <ul>
                 <li>Institutional</li>
                 <li>Licensed Custody</li>
@@ -143,7 +142,7 @@
             </ul>
         </div>
         <div class="company">
-            <h3>Company</h3>
+            <h3 class="title-footer-menu">Company</h3>
             <ul>
                 <li>About</li>
                 <li>Regulations</li>
@@ -152,7 +151,7 @@
             </ul>
         </div>
         <div class="resources">
-            <h3>Resources</h3>
+            <h3 class="title-footer-menu">Resources</h3>
             <ul>
                 <li>Support</li>
                 <li>FAQs</li>
@@ -162,7 +161,7 @@
             </ul>
         </div>
         <div class="terms">
-            <h3>Terms & Conditions</h3>
+            <h3 class="title-footer-menu">Terms & Conditions</h3>
             <ul>
                 <li>MidChains Limited (ADGM)</li>
                 <li>MCP MidChains Pay (DMCC)</li>
@@ -171,24 +170,24 @@
             </ul>
         </div>
     </section>
-    <section class="section-6">
-        <div class="store">
-            <img src="img/Google Play.png" alt="">
-            <img src="img/App Store.png" alt="">
+    <section class="footer-network">
+        <div class="footer-store">
+            <img src="assests/img/Google Play.png" alt="">
+            <img src="assests/img/App Store.png" alt="">
         </div>
-        <div class="main-logo">
-            <img src="img/Logo Midchains.png" alt="">
+        <div>
+            <img src="assests/img/Logo Midchains.png" alt="">
         </div>
-        <div class="icons">
-            <img src="img/Frame 624.png" alt="">
+        <div class="footer-icons">
+            <img src="assests/img/Frame 624.png" alt="">
         </div>
     </section>
-    <div class="subtitles">
-        <p class="more">Purchasing, holding and trading Virtual assets may not be suitable for everyone, so please ensure that you fully understand the risks involved. MidChains does not issue advice, recommendations or opinion in relation to acquiring, holding or trading a virtual assets. MidChains is not a financial advisor, and all services are provided on an execution only basis. The information on this site is not directed at residents of United States, or use by any person in any country or jurisdiction where such distribution or use would be contrary to local law or regulation.</p>
+    <div class="footer-subtitles">
+        <p class="footer-description-end">Purchasing, holding and trading Virtual assets may not be suitable for everyone, so please ensure that you fully understand the risks involved. MidChains does not issue advice, recommendations or opinion in relation to acquiring, holding or trading a virtual assets. MidChains is not a financial advisor, and all services are provided on an execution only basis. The information on this site is not directed at residents of United States, or use by any person in any country or jurisdiction where such distribution or use would be contrary to local law or regulation.</p>
     </div>
-    <div class="endd">
-        <p class="more">© 2022 Copyright. All Rights Reserved. MidChains. Sitemap</p>
+    <div class="footer-paragraf-end">
+        <p class="footer-description-end">© 2022 Copyright. All Rights Reserved. MidChains. Sitemap</p>
     </div>
+    
 </body>
-
 </html>
