--- a/about-midchains.html
+++ b/about-midchains.html
@@ -157,7 +157,7 @@
             <h3 class="title-footer-menu">Individuals</h3>
             <ul>
                 <li>MidChains Exchange</li>
-                <li><a href="index2.html" target="_blank" class="privatee">Private Clients</a></li>
+                <li><a href="private-clients.html" target="_blank" class="privatee">Private Clients</a></li>
                 <li>OTC Desk</li>
                 <li>Midchains Card</li>
             </ul>
